--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
   },
   "homepage": "https://github.com/zrasool88/gitRacer",
   "dependencies": {
+    "body-parser": "^1.9.2",
+    "ejs": "^1.0.0",
     "express": "^4.10.2",
     "express-ejs-layouts": "^1.1.0",
+    "express-partials": "^0.3.0",
     "socket.io": "^1.2.0"
   },
   "devDependencies": {
