--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "chai": "^1.10.0",
     "jasmine-node": "^1.14.5",
     "mocha": "^2.0.1",
-    "sinon": "^1.11.1",
-    "zombie": "^2.1.1"
+    "zombie": "^2.1.1",
+    "sinon": "^1.11.1"
   }
 }
