--- a/package.json
+++ b/package.json
@@ -23,13 +23,14 @@
     "express": "^4.10.2",
     "express-ejs-layouts": "^1.1.0",
     "express-partials": "^0.3.0",
+    "github": "^0.2.2",
+    "github-commits": "0.0.10",
     "socket.io": "^1.2.0"
   },
   "devDependencies": {
     "chai": "^1.10.0",
     "jasmine-node": "^1.14.5",
     "mocha": "^2.0.1",
-    "zombie": "^2.1.1",
-    "sinon": "^1.11.1"
+    "zombie": "^2.1.1"
   }
 }
